k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
        - name: backend-api
          image: registry.digitalocean.com/anyaa/backend-api:latest
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: backend-api
  namespace: backend
spec:
  selector:
    app: backend-api
  ports:
    - port: 3000
